Made QR-Decoder work

--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
     <title>Tamacoin</title>
   </head>
   <body>
-    <video src="" id="qr-scanner"></video>
-    <p class="coins">0</p>
+    <video
+      src=""
+      id="qr-scanner"
+      autoplay="autoplay"
+      style="display: none"
+    ></video>
+    <p id="data">Output:</p>
+    <p id="coins">0</p>
     <div id="debug"></div>
   </body>
 </html>
