--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <script type="module" src="main.js" defer></script>
-    <title>Tamacoin</title>
-  </head>
-  <body>
-    <video
-      src=""
-      id="qr-scanner"
-      autoplay="autoplay"
-      style="display: none"
-    ></video>
-    <p id="data">Output:</p>
-    <p id="coins">0</p>
-    <div id="debug"></div>
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="style.css" />
+        <script type="module" src="main.js" defer></script>
+        <title>Tamacoin</title>
+    </head>
+    <body>
+        <video
+            src=""
+            id="qr-scanner"
+            autoplay="autoplay"
+            style="display: none"
+        ></video>
+        <p id="data">Output:</p>
+        <p id="coins">0</p>
+        <div id="debug"></div>
+        <button onclick="localStorage.clear()">Clear Localstore</button>
+    </body>
 </html>
