--- a/index.html
+++ b/index.html
@@ -18,5 +18,11 @@
         <p id="coins">0</p>
         <div id="debug"></div>
         <button onclick="localStorage.clear()">Clear Localstore</button>
+        <input type="text" name="test" id="qr-data" value="da1aa9d1" />
+        <button
+            onclick="handleScan({data: document.querySelector('#qr-data').value})"
+        >
+            Test
+        </button>
     </body>
 </html>
