Added delete functionality

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <button
             onclick="handleScan({data: document.querySelector('#qr-data').value})"
         >
-            Test
+            Scan
         </button>
     </body>
 </html>
